[tool.poetry]
name = "axenix-travel"
version = "0.1.0"
description = "Приложение для поиска маршрутов на основе API Яндекс.Расписаний"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0.0"
requests = "^2.28.0"
dateutil = "^2.8.2"
folium = "^0.14.0"
pandas = "^1.3.3"
networkx = "^2.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
